# cpp_playg

./: .gitignore
closepair/: CMakeLists.txt  README.md  closest.cpp  closest.hpp  closestpair2.cpp  main.cpp  plot.cpp  plot.hpp  point.cpp  point.hpp  test.cpp  util.cpp  util.hpp
dp/: knapsack.cpp  wis.cpp
segtree/: LIS.cpp  count_max.cpp  prefix_sum.cpp  segtree.hpp  segtree_generic.cpp  segtree_impl.hpp
smp/: main.cpp  util.hpp
